--- a/map.html
+++ b/map.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="css/map.css">
 </head>
 <body onload="onInit()">
-    <div id="map" onclick="onPointClick()"></div>
+    <main class="main-app">
+        <div id="map"></div>
+        <aside class="list-wrapper">
+            <h3>Places:</h3>
+            <ul class="places-list"></ul>
+        </aside>
+    </main>
     <nav>
         <a href="./user-prefs.html">User Preferences</a>
         <a href="./index.html">Home</a>
     </nav>
     <script type="module" src="./js/mapController.js"></script>
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5ogPEqpBBJx9vIGagH9JbEuf44DsC9mg&callback=Function.prototype"></script> -->
 </body>
 </html>
